--- a/src/components/HamburgerMenu/HamburgerMenu.scss
+++ b/src/components/HamburgerMenu/HamburgerMenu.scss
@@ -6,7 +6,7 @@
   top: 0;
   min-width: 256px;
   min-height: 100vh;
-  background-color: #1d3142;
+  background-color: #436c79;;
   a {
     color: white;
     text-decoration: none;
