Getting data from firebase

--- a/src/components/MapCard/MapCard.scss
+++ b/src/components/MapCard/MapCard.scss
@@ -11,6 +11,8 @@
   border: 1px solid #e3e3e3;
   border-radius: measurements.$border-radius-medium;
   background-color: white;
+  min-width: 334px;
+  min-height: 604px;
 }
 
 .map-card-dlc {
