--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,2 +1,8 @@
 $dlc-vanilla: #79b9ce;
 $dlc-industries: #dcd453;
+
+$resource-oil: #2d393a;
+$resource-ore: #6c7f9b;
+$resource-fertile-land: #96a726;
+$resource-forestry: #0d6d26;
+$resource-water: #1872cf;
