--- a/src/components/MapStatBar/MapStatBar.scss
+++ b/src/components/MapStatBar/MapStatBar.scss
@@ -1,16 +1,23 @@
+@use '../../scss/_colors.scss';
+
 .map-stat-bar-wrapper {
   display: flex;
-  gap: .5rem;
+  gap: 1rem;
   img {
     max-height: 30px;
   }
 }
 
 .map-stat-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #e3e3e3;
   border-radius: 8px;
   width: 100%;
   min-height: 30px;
+  padding-right: 1em;
+  font-style: italic;
 }
 
 .map-stat-bar-progress {
@@ -18,4 +25,24 @@
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   background-color: #82AAE3;
+
+  &[data-stat-type='oil'] {
+    background-color: colors.$resource-oil;
+  }
+
+  &[data-stat-type='ore'] {
+    background-color: colors.$resource-ore;
+  }
+
+  &[data-stat-type='fertileLand'] {
+    background-color: colors.$resource-fertile-land;
+  }
+
+  &[data-stat-type='forestry'] {
+    background-color: colors.$resource-forestry;
+  }
+
+  &[data-stat-type='water'] {
+    background-color: colors.$resource-water;
+  }
 }
