--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 /*noinspection CssUnknownTarget*/
-@import 'https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap';
 /*noinspection CssUnknownTarget*/
 @import url('https://cdn.jsdelivr.net/npm/modern-css-reset/dist/reset.min.css');
 
 body {
-    font-family: 'Rubik', Helvetica, sans-serif;
+    font-family: 'Inter', Helvetica, sans-serif;
 }
 
 a {
-    color: black;
+    color: inherit;
     text-decoration: none;
 }
