--- a/src/views/home/Home.scss
+++ b/src/views/home/Home.scss
@@ -1,6 +1,7 @@
 .hero-wrapper {
   background-image: url(../../assets/backgrounds/hero.jpg);
   background-position: center;
+  background-size: cover;
   color: white;
   text-shadow: 2px 2px 5px black;
   display: flex;
